@@ -21,15 +21,16 @@ KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux"
 IUSE="+alsa aqua bluray bs2b cddb +cdio debug +dts dvb +dvd +enca encode fbcon ftp
 +iconv ipv6 jack joystick jpeg kernel_linux ladspa lcms +libass libcaca lirc mng +mp3
 +network -openal +opengl oss portaudio +postproc pulseaudio pvr quvi radio samba +shm
-v4l vcd vdpau +X xinerama +xscreensaver +xv"
+v4l vcd vdpau wayland +X xinerama +xscreensaver +xv"
 
 REQUIRED_USE="
 	cddb? ( cdio network )
 	lcms? ( opengl )
 	libass? ( iconv )
-	opengl? ( || ( aqua X ) )
+	opengl? ( || ( aqua wayland X ) )
 	radio? ( || ( dvb v4l ) )
 	vdpau? ( X )
+	wayland? ( opengl )
 	xinerama? ( X )
 	xscreensaver? ( X )
 	xv? ( X )
@@ -83,6 +84,11 @@ RDEPEND+="
 	pulseaudio? ( media-sound/pulseaudio )
 	quvi? ( >=media-libs/libquvi-0.4.1 )
 	samba? ( net-fs/samba )
+	wayland? (
+		>=dev-libs/wayland-1.0.0
+		media-libs/mesa[egl,wayland]
+		>=x11-libs/libxkbcommon-0.2.0
+	)
 	>=virtual/ffmpeg-9[encode?]
 "
 ASM_DEP="dev-lang/yasm"
@@ -150,8 +156,7 @@ src_configure() {
 	###################
 	# SDL output is fallback for platforms where nothing better is available
 	myconf+=" --disable-sdl --disable-sdl2"
-	# wayland needs xkbcommon, not in portage yet
-	myconf+=" --disable-wayland"
+	use wayland || myconf+=" --disable-wayland"
 	use encode || myconf+=" --disable-encoding"
 	use network || myconf+=" --disable-networking"
 	myconf+=" $(use_enable joystick)"
