@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
+  add USE wayland, xkbcommon is in portage
+
   27 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
   eapi5, cosmetics
 
